--- a/notebooks/Climate_Velocities/oa_escvel_calc.ipynb
+++ b/notebooks/Climate_Velocities/oa_escvel_calc.ipynb
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Calculations (all ensemble members)"
+    "## Calculations (all steps for all ensemble members)"
    ]
   },
   {
@@ -71,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for index in range(24, 31):\n",
+    "# for index in range(0, 31):\n",
     "#     if index < 10:\n",
     "#         indexlabel = str(0)+str(index)\n",
     "#     else:\n",
@@ -106,7 +106,7 @@
     "\n",
     "#     # Definte projection transformations and coordiantes\n",
     "#     crs = ccrs.Robinson(central_longitude=180)\n",
-    "#     src=ccrs.PlateCarree()\n",
+    "#     src = ccrs.PlateCarree()\n",
     "#     lon = ds.xt_ocean.data\n",
     "#     lat = ds.yt_ocean.data\n",
     "\n",
@@ -294,6 +294,13 @@
    "metadata": {},
    "source": [
     "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculations (separate steps)"
    ]
   },
   {
@@ -513,7 +520,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Calculations"
+    "## Minimum distance calculation"
    ]
   },
   {
@@ -566,6 +573,13 @@
     "#     list_vector_dx.append(vector_dx)\n",
     "#     list_vector_dy.append(vector_dy)\n",
     "    list_vector_magnitude.append(vector_magnitude)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Clean list of escape velocities"
    ]
   },
   {
@@ -784,11 +798,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# # Read in and clean DataArray for annual ensemble average\n",
@@ -832,46 +842,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read in and clean DataArray for 10-yr moving ensemble average\n",
-    "vel_path = './oa_ensemble_escvel/ens_values/ensAvg10yr'\n",
-    "x_path = './oa_ensemble_escvel/ens_xcoords/ensAvg10yr'\n",
-    "y_path = './oa_ensemble_escvel/ens_ycoords/ensAvg10yr'\n",
-    "ens_movingAvg_data = xr.open_dataset(vel_path)\n",
-    "ens_movingAvg_xp = xr.open_dataset(x_path)\n",
-    "ens_movingAvg_yp = xr.open_dataset(y_path)\n",
+    "# # Read in and clean DataArray for 10-yr moving ensemble average\n",
+    "# vel_path = './oa_ensemble_escvel/ens_values/ensAvg10yr'\n",
+    "# x_path = './oa_ensemble_escvel/ens_xcoords/ensAvg10yr'\n",
+    "# y_path = './oa_ensemble_escvel/ens_ycoords/ensAvg10yr'\n",
+    "# ens_movingAvg_data = xr.open_dataset(vel_path)\n",
+    "# ens_movingAvg_xp = xr.open_dataset(x_path)\n",
+    "# ens_movingAvg_yp = xr.open_dataset(y_path)\n",
     "\n",
-    "ens_movingAvg_vel = []\n",
-    "ens_movingAvg_xpoints = []\n",
-    "ens_movingAvg_ypoints = []\n",
+    "# ens_movingAvg_vel = []\n",
+    "# ens_movingAvg_xpoints = []\n",
+    "# ens_movingAvg_ypoints = []\n",
     "    \n",
-    "# append 5 'None' years so indices match (1955 = index 5)\n",
-    "for y in range(5):\n",
-    "    ens_movingAvg_vel.append(None)\n",
-    "    ens_movingAvg_xpoints.append(None)\n",
-    "    ens_movingAvg_ypoints.append(None)\n",
+    "# # append 5 'None' years so indices match (1955 = index 5)\n",
+    "# for y in range(5):\n",
+    "#     ens_movingAvg_vel.append(None)\n",
+    "#     ens_movingAvg_xpoints.append(None)\n",
+    "#     ens_movingAvg_ypoints.append(None)\n",
     "\n",
-    "max_len = len(ens_movingAvg_data.val_idx)\n",
+    "# max_len = len(ens_movingAvg_data.val_idx)\n",
     "\n",
-    "# Clean escape velocity lists for each year\n",
-    "for i in range(0, vel_data_range-10): # 131 years for 10yr moving avg\n",
-    "    escvel = ens_movingAvg_data.isel(year=i).velocity.data.tolist()\n",
-    "    xpoints = ens_movingAvg_xp.isel(year=i).xpoints.data.tolist()\n",
-    "    ypoints = ens_movingAvg_yp.isel(year=i).ypoints.data.tolist()\n",
-    "    nan_idx = None\n",
-    "    for p in range(0,max_len):\n",
-    "        val = escvel[p]\n",
-    "        if val != val:\n",
-    "            nan_idx = p  # track index where filler NaN values start\n",
-    "            break\n",
+    "# # Clean escape velocity lists for each year\n",
+    "# for i in range(0, vel_data_range-10): # 131 years for 10yr moving avg\n",
+    "#     escvel = ens_movingAvg_data.isel(year=i).velocity.data.tolist()\n",
+    "#     xpoints = ens_movingAvg_xp.isel(year=i).xpoints.data.tolist()\n",
+    "#     ypoints = ens_movingAvg_yp.isel(year=i).ypoints.data.tolist()\n",
+    "#     nan_idx = None\n",
+    "#     for p in range(0,max_len):\n",
+    "#         val = escvel[p]\n",
+    "#         if val != val:\n",
+    "#             nan_idx = p  # track index where filler NaN values start\n",
+    "#             break\n",
     "\n",
-    "    del escvel[p:]\n",
-    "    del ypoints[p:]\n",
-    "    del xpoints[p:]\n",
+    "#     del escvel[p:]\n",
+    "#     del ypoints[p:]\n",
+    "#     del xpoints[p:]\n",
     "\n",
-    "    # append each year to list of entire simulation\n",
-    "    ens_movingAvg_vel.append(escvel)\n",
-    "    ens_movingAvg_xpoints.append(xpoints)\n",
-    "    ens_movingAvg_ypoints.append(ypoints)"
+    "#     # append each year to list of entire simulation\n",
+    "#     ens_movingAvg_vel.append(escvel)\n",
+    "#     ens_movingAvg_xpoints.append(xpoints)\n",
+    "#     ens_movingAvg_ypoints.append(ypoints)"
    ]
   },
   {
@@ -960,19 +970,6 @@
     "    list_ensmbrs_north.append(ensmbr_north_avg)\n",
     "    list_ensmbrs_equ.append(ensmbr_equ_avg)\n",
     "    list_ensmbrs_south.append(ensmbr_south_avg)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for i in range(141):\n",
-    "#     print(list_ensmbrs_global[1][i])\n",
-    "#     print(list_ensmbrs_north[1][i])\n",
-    "#     print()\n",
-    "# # len(ens_movingAvg_vel[50])"
    ]
   },
   {
@@ -1093,38 +1090,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ensmbr_global = list_ensmbrs_global[m]  \n",
-    "# ensmbr_global[i]\n",
-    "# movingAvg_global[i]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for i in range(141):\n",
-    "#     print(list_ensmbrs_global_nat[4][i])\n",
-    "#     print(list_ensmbrs_north_nat[4][i])\n",
-    "#     print()\n",
-    "\n",
-    "# for m in range(1,num_members+1):\n",
-    "#     print(list_ensmbrs_north_nat[m][50])\n",
-    "# # list_global_nat_avg[50]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate natural variability average over ensemble members\n",
+    "# Get average natural variability over ensemble members\n",
     "list_global_nat_avg = []\n",
     "list_north_nat_avg = []\n",
     "list_equ_nat_avg = []\n",
